--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
+    "helmet": "^3.5.0",
     "mongoose": "^4.5.8",
+    "pug": "^2.0.0-beta.12",
     "request": "^2.74.0",
     "request-promise": "^4.1.1",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "validator": "^7.0.0"
   },
   "devDependencies": {
+    "dotenv": "^4.0.0",
     "nodemon": "^1.10.0"
   }
 }
