--- a/aws-serverless/package.json
+++ b/aws-serverless/package.json
@@ -10,10 +10,12 @@
     "@azure/cognitiveservices-imagesearch": "^3.0.1",
     "@azure/ms-rest-azure-js": "^2.0.1",
     "@types/node-fetch": "^2.5.7",
+    "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.0",
     "node-fetch": "^2.6.1",
     "source-map-support": "^0.5.19",
     "unfetch": "^4.1.0",
+    "uuid": "^8.3.0",
     "validator": "^13.1.17"
   },
   "devDependencies": {
