--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# package directories
 node_modules
-data
-.env
+jspm_packages
+
+# Serverless directories
+.serverless
+
+# Webpack directories
+.webpack
