--- a/package.json
+++ b/package.json
@@ -1,27 +1,37 @@
 {
-  "name": "img-search-api",
+  "name": "aws-serverless",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "description": "Serverless webpack example using Typescript",
+  "main": "imageSearch.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "n0f3",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0",
-    "helmet": "^3.5.0",
-    "mongoose": "^4.5.8",
-    "pug": "^2.0.0-beta.12",
-    "request": "^2.74.0",
-    "request-promise": "^4.1.1",
-    "underscore": "^1.8.3",
-    "validator": "^7.0.0"
+    "@azure/cognitiveservices-imagesearch": "^3.0.1",
+    "@azure/ms-rest-azure-js": "^2.0.1",
+    "@types/node-fetch": "^2.5.7",
+    "@types/uuid": "^8.3.0",
+    "@types/validator": "^13.1.0",
+    "node-fetch": "^2.6.1",
+    "source-map-support": "^0.5.19",
+    "unfetch": "^4.1.0",
+    "uuid": "^8.3.0",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
-    "dotenv": "^4.0.0",
-    "nodemon": "^1.10.0"
-  }
+    "@types/aws-lambda": "^8.10.62",
+    "@types/node": "^14.11.2",
+    "@types/serverless": "^1.78.0",
+    "fork-ts-checker-webpack-plugin": "^5.2.0",
+    "serverless-dotenv-plugin": "^3.0.0",
+    "serverless-offline": "^6.8.0",
+    "serverless-webpack": "^5.3.5",
+    "ts-loader": "^8.0.4",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3",
+    "webpack": "^4.44.2",
+    "webpack-node-externals": "^2.5.2"
+  },
+  "author": "Alessandro Metta",
+  "license": "MIT"
 }
